[package]
name = "detours-sys2"
version = "0.2.0"
authors = [
    "Diana <5275194+DianaNites@users.noreply.github.com>",
    "Berrysoft <Strawberry_Str@hotmail.com>",
]
edition = "2021"
links = "detours"
# Package stuff
description = "Rust bindings to Microsoft Detours"
documentation = "https://github.com/microsoft/Detours/wiki/Reference"
homepage = "https://github.com/DianaNites/detours"
repository = "https://github.com/DianaNites/detours"
readme = "README.md"
keywords = ["detours", "hooking", "injection"]
categories = ["external-ffi-bindings", "os::windows-apis"]
license = "MIT OR Apache-2.0"
exclude = ["/.vscode/**"]

[badges]
maintenance = { status = "as-is" }

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[build-dependencies]
cc = "1.1.30"
